# developer-policy-cli

./: .env.example  .gitignore  .gitmodules  Cargo.toml  IPFS_UPLOAD.md  Makefile  NewtonErc20.abi.json  README.md  WARP.md  deepsource.toml  flake.nix  foundry.toml  newton_prover_config.prod.json  newton_prover_config.stagef.json  params_schema.json  policy.rego  rego.rego  rego.rg  remappings.txt  sample_attestation.json  sample_client_params.json  sample_intent.json
.cargo/: config.toml
contracts/: NewtonErc20.sol  YourClientFactory.sol  YourPolicyClient.sol
crates/shared/src/: lib.rs  price.rs  strategy.rs  tokens.rs
crates/trade-agent/: Cargo.toml
crates/trade-agent-1/: Cargo.toml
crates/trade-agent-1/src/: main.rs  price_fetcher.rs
crates/trade-agent/src/: main.rs
crates/wasm-component/: Cargo.toml
crates/wasm-component/src/: api.rs  bindings.rs  config.rs  main.rs  wasi_fetcher.rs
op-sim/: Cargo.toml  README.md
op-sim/src/: main.rs
policy-examples/chainalysis/policy-files/: policy.rego
policy-examples/farcaster-user-data/: README.md  demo_payload.json
policy-examples/farcaster-user-data/py_bindings/: app.py
policy-examples/farcaster-user-data/server/: README.md
policy-examples/investment-guardrails/policy-data-implementation/: polygon-treasury-yields.js
policy-examples/investment-guardrails/policy-files/: policy.rego  policy_data_metadata.json  policy_metadata.json
policy-examples/persona-kyc-demo/: newton-provider.wit
policy-examples/plaid-kyc-demo/policy-files/: params_schema.json  policy.rego  policy_data_metadata.json  policy_metadata.json
policy-examples/plaid-kyc-demo/py_bindings/: app.py
policy-examples/plaid-kyc-demo/py_bindings/wit_world/: __init__.py
policy-examples/plaid-kyc-demo/py_bindings/wit_world/imports/: http.py
policy-examples/security-signals/policy-data-implementation/: risk-level.js
policy-examples/security-signals/policy-files/: policy.rego  policy_cids.json
policy-files/: policy.wasm  policy_params.json
policy-files-examples/: params_schema.json  policy.rego  policy_cids.json  policy_uris.json
policy-files-examples/chainalysis/: policy_cids.json
policy-files-examples/max-gas-price/: policy.rego  policy_data_metadata.json  policy_metadata.json
rego-sim/: .gitignore  Cargo.toml  README.md  data.json  input.json  marshal_data.js  merge_and_parse.js  policy.rego  policy_params_data.json  run_rego_policy.sh  test_intent.json  wasm_data.json
rego-sim/lib/: marshal_data.js  marshal_input.js
rego-sim/src/: lib.rs  utils.rs
script/: DeployClientFactory.s.sol  DeployNewtonErc20PolicyClient.s.sol  DeployPolicyClient.s.sol  SetPolicyClientParams.s.sol  SpendAttestation.s.sol
script/rust/: Cargo.toml  SubmitTaskEvaluation.rs  hello.rs
script/rust/libs/: intent_parsing.rs  signature.rs  utils.rs
src/: bindings.rs  config.rs  main.rs  models.rs  output.rs  test_native.rs
