[package]
name = "rego-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
eyre = "0.6"
anyhow = "1.0.100"
alloy-dyn-abi = "1.4.0"
tracing = "0.1.41"
alloy-primitives = "1.4.0"
alloy = "1.0.41"
alloy-json-abi = "1.4.0"