[package]
name = "trade-agent-1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trade-agent-1"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.21", features = ["full"] }
jsonrpsee = { version = "0.26", features = ["client-core", "http-client"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
eyre = "0.6"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Alloy for contract interaction
alloy = { version = "0.13", features = ["full", "signer-keystore"] }
