[package]
name = "newton-trade-agent-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[package.metadata.component]
package = "component:newton-trade-agent-wasm"

[dependencies]
shared = { path = "../shared" }
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }
wit-bindgen = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyjson = "2.5"
dotenvy = "0.15"

[build-dependencies]
wit-bindgen = "0.37.0"
