[package]
name = "SubmitTaskEvaluation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "SubmitTaskEvaluation"
path = "SubmitTaskEvaluation.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
alloy-primitives = "0.4"
k256 = "0.13"
dotenv = "0.15"
hex = "0.4"